Add support for setting the framework type
* Made output if cf:info more like vmc info command.
* Added frameworks and services to cf:info output.
* Added validation for framework choice during cf:push.
* Fixed typo in getFramework() method.
* Add support for setting environment variables during cf:push.
* Added listing of env in cf:help.
* Add some Unit test for CommonUtils, Push and AbstractApplicationAwareCloudFoundryMojo.
* Input validation failed due to incorrect default value.
* Update copyright notices to '2012'
* Update author information
* Add framework parameter information to README.md
* Add framework parameter information to *help* goal

Change-Id: I3521ebec99f31c2f2f3738bd3d81c22eedcfb115